; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/nvi/ex/extr_ex_tag.c_ex_tag_top.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/nvi/ex/extr_ex_tag.c_ex_tag_top.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@TAG_EMPTY = common dso_local global i32 0, align 4
@_tqh = common dso_local global i32 0, align 4
@q = common dso_local global i32 0, align 4
@E_C_FORCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ex_tag_top(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call %struct.TYPE_5__* @EXP(i32* %7)
  store %struct.TYPE_5__* %8, %struct.TYPE_5__** %6, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @TAILQ_EMPTY(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @TAG_EMPTY, align 4
  %17 = call i32 @tag_msg(i32* %15, i32 %16, i32* null)
  store i32 1, i32* %3, align 4
  br label %34

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @_tqh, align 4
  %24 = call i32 @TAILQ_LAST(i32 %22, i32 %23)
  %25 = load i32, i32* @_tqh, align 4
  %26 = load i32, i32* @q, align 4
  %27 = call i32 @TAILQ_PREV(i32 %24, i32 %25, i32 %26)
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @E_C_FORCE, align 4
  %32 = call i32 @FL_ISSET(i32 %30, i32 %31)
  %33 = call i32 @tag_pop(i32* %19, i32 %27, i32 %32)
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %18, %14
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local %struct.TYPE_5__* @EXP(i32*) #1

declare dso_local i64 @TAILQ_EMPTY(i32) #1

declare dso_local i32 @tag_msg(i32*, i32, i32*) #1

declare dso_local i32 @tag_pop(i32*, i32, i32) #1

declare dso_local i32 @TAILQ_PREV(i32, i32, i32) #1

declare dso_local i32 @TAILQ_LAST(i32, i32) #1

declare dso_local i32 @FL_ISSET(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
